// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-acoustic-campaign destination: receiveEvents action - all fields 1`] = `
"<Envelope>
      <Body>
        <InsertUpdateRelationalTable>
        <TABLE_ID>lLhce#$[oZh </TABLE_ID>
          <ROWS>
     <ROW>
     <COLUMN name=\\"Email\\">           <![CDATA[wel@nubno.fk]]></COLUMN>
     <COLUMN name=\\"EventSource\\">     <![CDATA[lLhce#$[oZh Event]]></COLUMN>  
     <COLUMN name=\\"EventName\\">       <![CDATA[testType]]></COLUMN>
     <COLUMN name=\\"EventValue\\">      <![CDATA[lLhce#$[oZh]]></COLUMN>
     <COLUMN name=\\"Event Timestamp\\"> <![CDATA[2021-02-01T00:00:00.000Z]]></COLUMN>
     </ROW>
     <ROW>
     <COLUMN name=\\"Email\\">           <![CDATA[wel@nubno.fk]]></COLUMN>
     <COLUMN name=\\"EventSource\\">     <![CDATA[lLhce#$[oZh Event]]></COLUMN>  
     <COLUMN name=\\"EventName\\">       <![CDATA[0.testType]]></COLUMN>
     <COLUMN name=\\"EventValue\\">      <![CDATA[lLhce#$[oZh]]></COLUMN>
     <COLUMN name=\\"Event Timestamp\\"> <![CDATA[2021-02-01T00:00:00.000Z]]></COLUMN>
     </ROW></ROWS>
        </InsertUpdateRelationalTable>
      </Body>
    </Envelope>"
`;

exports[`Testing snapshot for actions-acoustic-campaign destination: receiveEvents action - required fields 1`] = `
"<Envelope>
      <Body>
        <InsertUpdateRelationalTable>
        <TABLE_ID>lLhce#$[oZh </TABLE_ID>
          <ROWS></ROWS>
        </InsertUpdateRelationalTable>
      </Body>
    </Envelope>"
`;

exports[`Testing snapshot for actions-acoustic-campaign destination: receiveEvents action - required fields 2`] = `
Headers {
  Symbol(map): Object {
    "accept": Array [
      "*/*",
    ],
    "accept-encoding": Array [
      "gzip, deflate, br",
    ],
    "authorization": Array [
      "Bearer fake_accessToken",
    ],
    "connection": Array [
      "keep-alive",
    ],
    "content-type": Array [
      "text/xml",
    ],
    "user-agent": Array [
      "Segment Action (Acoustic Destination) POST_Updates",
    ],
  },
}
`;
